<resources>
    <string name="app_name">Sem08</string>
    <string name="et_correo">Correo</string>
    <string name="et_clave">Contraseña</string>
    <string name="noLogin">Ususrio y contraseña no valida</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NombreLugar">Nombre del Lugar</string>
    <string name="CorreoLugar">Emai</string>
    <string name="TelefonoLugar">Telefono(9999-9999)</string>
    <string name="WebLugar">Web</string>
    <string name="btAddLugar">Agregar Lugar</string>
    <string name="ms_AddLugar">Lugar Agragado</string>
    <string name="ms_UpdateLugar">Lugar Actualizado</string>
    <string name="ms_DeleteLugar">Lugar Eliminado</string>
    <string name="ms_FaltaValores">Faltan Valores!!!</string>
    <string name="bt_update_lugar">Actualizar Lugar</string>
    <string name="bt_delete_lugar">Eliminar Lugar</string>

    <string name="todo"> To do</string>
    <string name="msg_imagen">Foto del Lugar</string>

    <string name="msgEscucharAudio">FEscuchar Audio</string>


    <string name="msgInicioNotaAudio">Grabando Audio</string>
    <string name="msgDetieneNotaAudio">Detener Audio</string>

    <string name="msgSubiendo">Subiendo Archivos</string>
</resources>